--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -1,23 +1,18 @@
 /*-background stuff-*/
 .flex-container-banner{
   display: flex;
+  justify-content: space-between;
   align-items: center;
   max-height: 90vh;
-
-  background-image: url("landingpic.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  opacity: 0.85;
 }
 
 /*-banner stuff-*/
 .banner_background{
   margin-left: 250px;
+  margin-right: 50px;
   max-height: 200px;
   height: 100%;
-  width: 600px;
+  max-width: 600px;
 }
 
 .banner_fontHeader{
@@ -41,9 +36,22 @@
 }
 
 .expand{
+  object-fit: cover;
+  background-image: url("landingpic.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  opacity: 0.85;
+
   height: 100%;
   width: 100%;
   margin: 0px;
   padding: 0px;
   overflow: hidden;
+}
+
+
+.signin-component{
+  margin-right: 200px;
 }
